--- a/TASVideos/Pages/Submissions/View.cshtml
+++ b/TASVideos/Pages/Submissions/View.cshtml
@@ -1,5 +1,5 @@
 @page "{id}"
-@using TASVideos.Pages.Submissions.Models
+@inject ISubmissionService _submissionService
 @model ViewModel
 @{
 	ViewData["Title"] = $"{Model.Submission.Title} - Submission #{Model.Id}";
@@ -98,8 +98,8 @@
 				</small>
 			</h4>
 			<h4 condition="Model.IsPublished" class="alert-heading">Status: <a asp-page="/Publications/View" asp-route-id="@Model.PublicationId">@Model.Submission.Status.EnumDisplayName()</a></h4>
-			<div condition="Model.Submission.HoursRemainingForJudging() > 0">
-				(Available for judging in @Model.Submission.HoursRemainingForJudging() hours)
+			<div condition="_submissionService.HoursRemainingForJudging(Model.Submission) > 0">
+				(Available for judging in @_submissionService.HoursRemainingForJudging(Model.Submission) hours)
 			</div>
 			<span condition="@(!string.IsNullOrWhiteSpace(Model.Submission.Judge))">
 				<label asp-for="Submission.Judge"></label>:
