add forum markup usage link to post creation

--- a/TASVideos/Pages/Forum/_CreatePostHelper.cshtml
+++ b/TASVideos/Pages/Forum/_CreatePostHelper.cshtml
@@ -48,6 +48,9 @@
 	<button type="button" class="btn btn-success btn-sm flex-grow-0 border-dark" tabindex="-1" data-fmt="[userfile],[/userfile]">userfile</button>
 	<button type="button" class="btn btn-success btn-sm flex-grow-0 border-dark" tabindex="-1" data-fmt="[wip],[/wip]">wip</button>
 </div>
+<div class="mt-1 mb-2">
+	<small><a href="/ForumMarkup" target="_blank">Forum Markup Usage</a></small>
+</div>
 <script>
 	document.addEventListener("DOMContentLoaded", function installButtonEvents() {
 		let buttons = document.querySelectorAll("button[data-fmt]");
