--- a/TASVideos/Pages/Shared/Components/NoGame/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/NoGame/Default.cshtml
@@ -1,19 +1,33 @@
-﻿@model IReadOnlyCollection<SubmissionsWithNoGamesModel>
-<label>Total count: @Model.Count</label>
-<table class="table table-bordered table-striped">
-	<tr>
-		<th>Id</th>
-		<th>Title</th>
-	</tr>
-	@foreach (var sub in Model)
-	{
-		<tr>
-			<td>
-				<a href="/@(sub.Id)S">@(sub.Id)S</a>
-			</td>
-			<td>
-				@sub.Title
-			</td>
-		</tr>
-	}
-</table>
+﻿@model TASVideos.ViewComponents.Models.MissingRomModel
+
+@if (Model.Publications.Any())
+{
+	<h4>Publications With Missing Games (@Model.Publications.Count)</h4>
+	<ul>
+		@foreach (var pub in Model.Publications)
+		{
+			<li>
+				<pub-link id="pub.Id">@pub.Title</pub-link>
+			</li>
+		}
+	</ul>
+}
+
+@if (Model.Publications.Any() && Model.Submissions.Any())
+{
+	<hr />
+}
+
+@if (Model.Submissions.Any())
+{
+	
+	<h4>Submissions With Missing Games (@Model.Submissions.Count)</h4>
+	<ul>
+		@foreach (var sub in Model.Submissions)
+		{
+			<li>
+				<sub-link id="sub.Id">@sub.Title</sub-link>
+			</li>
+		}
+	</ul>
+}
