--- a/TASVideos/Pages/Shared/Components/FrontpageSubmissionList/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/FrontpageSubmissionList/Default.cshtml
@@ -1,4 +1,7 @@
 ﻿@model IEnumerable<TASVideos.Pages.Submissions.Models.SubmissionListEntry>
+@{
+	int zzz = 0;
+}
 <div class="table-container">
 	<table class="table table-striped table-bordered table-sm">
 		<tr>
@@ -14,7 +17,7 @@
 				<td><timezone-convert asp-for="@item.Submitted" date-only="true" /></td>
 				<td>@item.System @item.GameName @(!string.IsNullOrWhiteSpace(item.Branch) ? $"\"{item.Branch}\"" : "")</td>
 				<td><sub-link id="item.Id">@(item.Time.ToStringWithOptionalDaysAndHours())</sub-link></td>
-				<td>@(string.Join(", ",(item.Authors ?? Enumerable.Empty<string>()).Concat((item.AdditionalAuthors ?? "").SplitWithEmpty(","))).LastCommaToAmpersand())</td>
+				<td><author-list authors="item.Authors" additional-authors="@item.AdditionalAuthors"></author-list></td>
 				<td>@item.Status.EnumDisplayName()</td>
 			</tr>
 		}
