--- a/TASVideos/Pages/Shared/_Pager.cshtml
+++ b/TASVideos/Pages/Shared/_Pager.cshtml
@@ -2,45 +2,152 @@
 @model IPaged
 
 <row class="my-2 align-items-center">
+	<div class="col-12">
+		<div class="btn-group flex-wrap" role="group">
+			<a disable="@Model.CurrentPage == 1"
+			   asp-page="@ViewContext.Page()"
+			   asp-all-route-data="@Model.AdditionalProperties()"
+			   asp-route-CurrentPage="@(Model.CurrentPage - 1)"
+			   asp-route-PageSize="@Model.PageSize"
+			   asp-route-Sort="@Model.Sort"
+			   type="button" class="btn btn-primary border-dark flex-grow-0">
+				<span class="fa fa-chevron-left"></span>
+			</a>
+
+			@{
+				var totalPages = Model.LastPage();
+				var currentPage = Model.CurrentPage ?? 1;
+				var pageList = Enumerable.Range(1, totalPages).ToList();
+				var leftShown = pageList.Where(p => p <= 2 && p < currentPage - 1);
+				var leftHidden = pageList.Where(p => 2 < p && p < currentPage - 1).ToList();
+				var middleShown = pageList.Where(p => currentPage - 1 <= p && p <= currentPage + 1);
+				var rightHidden = pageList.Where(p => currentPage + 1 < p && p < totalPages - 1).ToList();
+				var rightShown = pageList.Where(p => currentPage + 1 < p && totalPages - 1 <= p);
+				foreach (var iteratorPage in leftShown)
+				{
+					<a asp-page="@ViewContext.Page()"
+					   asp-all-route-data="@Model.AdditionalProperties()"
+					   asp-route-CurrentPage="@iteratorPage"
+					   asp-route-PageSize="@Model.PageSize"
+					   asp-route-Sort="@Model.Sort"
+					   type="button" class="btn btn-primary border-dark flex-grow-0">@iteratorPage</a>
+				}
+				if (leftHidden.Count == 1)
+				{
+					<a asp-page="@ViewContext.Page()"
+					   asp-all-route-data="@Model.AdditionalProperties()"
+					   asp-route-CurrentPage="@leftHidden.First()"
+					   asp-route-PageSize="@Model.PageSize"
+					   asp-route-Sort="@Model.Sort"
+					   type="button" class="btn btn-primary border-dark flex-grow-0">@leftHidden.First()</a>
+
+				}
+				<div condition="leftHidden.Count > 1" class="btn-group" role="group">
+					<button type="button" class="btn btn-outline-primary" data-bs-toggle="dropdown">...</button>
+					<ul class="dropdown-menu">
+						@foreach (var iteratorPage in leftHidden)
+						{
+							<li>
+								<a asp-page="@ViewContext.Page()"
+								   asp-all-route-data="@Model.AdditionalProperties()"
+								   asp-route-CurrentPage="@iteratorPage"
+								   asp-route-PageSize="@Model.PageSize"
+								   asp-route-Sort="@Model.Sort"
+								   class="dropdown-item">@iteratorPage</a>
+							</li>
+						}
+					</ul>
+				</div>
+				foreach (var iteratorPage in middleShown)
+				{
+					<a asp-page="@ViewContext.Page()"
+					   asp-all-route-data="@Model.AdditionalProperties()"
+					   asp-route-CurrentPage="@iteratorPage"
+					   asp-route-PageSize="@Model.PageSize"
+					   asp-route-Sort="@Model.Sort"
+					   type="button" class="btn btn-primary border-dark flex-grow-0 @(iteratorPage == currentPage ? "active" : "")">@iteratorPage</a>
+				}
+				if (rightHidden.Count == 1)
+				{
+					<a asp-page="@ViewContext.Page()"
+					   asp-all-route-data="@Model.AdditionalProperties()"
+					   asp-route-CurrentPage="@rightHidden.First()"
+					   asp-route-PageSize="@Model.PageSize"
+					   asp-route-Sort="@Model.Sort"
+					   type="button" class="btn btn-primary border-dark flex-grow-0">@rightHidden.First()</a>
+				}
+				<div condition="rightHidden.Count > 1" class="btn-group" role="group">
+					<button type="button" class="btn btn-outline-primary" data-bs-toggle="dropdown">...</button>
+					<ul class="dropdown-menu">
+						@foreach (var iteratorPage in rightHidden)
+						{
+							<li>
+								<a asp-page="@ViewContext.Page()"
+								   asp-all-route-data="@Model.AdditionalProperties()"
+								   asp-route-CurrentPage="@iteratorPage"
+								   asp-route-PageSize="@Model.PageSize"
+								   asp-route-Sort="@Model.Sort"
+								   class="dropdown-item">@iteratorPage</a>
+							</li>
+						}
+					</ul>
+				</div>
+				foreach (var iteratorPage in rightShown)
+				{
+					<a asp-page="@ViewContext.Page()"
+					   asp-all-route-data="@Model.AdditionalProperties()"
+					   asp-route-CurrentPage="@iteratorPage"
+					   asp-route-PageSize="@Model.PageSize"
+					   asp-route-Sort="@Model.Sort"
+					   type="button" class="btn btn-primary border-dark flex-grow-0">@iteratorPage</a>
+				}
+			}
+			<a disable="@Model.CurrentPage == Model.LastPage()"
+			   asp-page="@ViewContext.Page()"
+			   asp-all-route-data="@Model.AdditionalProperties()"
+			   asp-route-CurrentPage="@(Model.CurrentPage + 1)"
+			   asp-route-PageSize="@Model.PageSize"
+			   asp-route-Sort="@Model.Sort"
+			   type="button" class="btn btn-primary border-dark flex-grow-0">
+				<span class="fa fa-chevron-right"></span>
+			</a>
+		</div>
+	</div>
 	<div class="col-md-4 float-start" condition="@Model.LastPage() > 1">
-		<a
-			disable="@Model.CurrentPage == 1"
-			asp-page="@ViewContext.Page()"
-			asp-all-route-data="@Model.AdditionalProperties()"
-			asp-route-CurrentPage="1"
-			asp-route-PageSize="@Model.PageSize"
-			asp-route-Sort="@Model.Sort"
-			class="btn btn-secondary btn-sm" title="First Page">
+		<a disable="@Model.CurrentPage == 1"
+		   asp-page="@ViewContext.Page()"
+		   asp-all-route-data="@Model.AdditionalProperties()"
+		   asp-route-CurrentPage="1"
+		   asp-route-PageSize="@Model.PageSize"
+		   asp-route-Sort="@Model.Sort"
+		   class="btn btn-secondary btn-sm" title="First Page">
 			<span class="fa fa-fast-backward"></span>
 		</a>
-		<a
-			disable="@Model.CurrentPage == 1"
-			asp-page="@ViewContext.Page()"
-			asp-all-route-data="@Model.AdditionalProperties()"
-			asp-route-CurrentPage="@(Model.CurrentPage - 1)"
-			asp-route-PageSize="@Model.PageSize"
-			asp-route-Sort="@Model.Sort"
-			class="btn btn-secondary btn-sm" title="Previous Page">
+		<a disable="@Model.CurrentPage == 1"
+		   asp-page="@ViewContext.Page()"
+		   asp-all-route-data="@Model.AdditionalProperties()"
+		   asp-route-CurrentPage="@(Model.CurrentPage - 1)"
+		   asp-route-PageSize="@Model.PageSize"
+		   asp-route-Sort="@Model.Sort"
+		   class="btn btn-secondary btn-sm" title="Previous Page">
 			<span class="fa fa-chevron-left"></span>
 		</a>
-		<a
-			disable="@Model.CurrentPage == Model.LastPage()"
-			asp-page="@ViewContext.Page()"
-			asp-all-route-data="@Model.AdditionalProperties()"
-			asp-route-CurrentPage="@(Model.CurrentPage + 1)"
-			asp-route-PageSize="@Model.PageSize"
-			asp-route-Sort="@Model.Sort"
-			class="btn btn-secondary btn-sm" title="Next Page">
+		<a disable="@Model.CurrentPage == Model.LastPage()"
+		   asp-page="@ViewContext.Page()"
+		   asp-all-route-data="@Model.AdditionalProperties()"
+		   asp-route-CurrentPage="@(Model.CurrentPage + 1)"
+		   asp-route-PageSize="@Model.PageSize"
+		   asp-route-Sort="@Model.Sort"
+		   class="btn btn-secondary btn-sm" title="Next Page">
 			<span class="fa fa-chevron-right"></span>
 		</a>
-		<a
-			disable="@Model.CurrentPage == Model.LastPage()"
-			asp-page="@ViewContext.Page()"
-			asp-all-route-data="@Model.AdditionalProperties()"
-			asp-route-CurrentPage="@Model.LastPage()"
-			asp-route-PageSize="@Model.PageSize"
-			asp-route-Sort="@Model.Sort"
-			class="btn btn-secondary btn-sm" title="Last Page">
+		<a disable="@Model.CurrentPage == Model.LastPage()"
+		   asp-page="@ViewContext.Page()"
+		   asp-all-route-data="@Model.AdditionalProperties()"
+		   asp-route-CurrentPage="@Model.LastPage()"
+		   asp-route-PageSize="@Model.PageSize"
+		   asp-route-Sort="@Model.Sort"
+		   class="btn btn-secondary btn-sm" title="Last Page">
 			<span class="fa fa-fast-forward"></span>
 		</a>
 		<a asp-page="@ViewContext.Page()" class="btn btn-secondary btn-sm">Reset</a>
