--- a/TASVideos/Pages/Shared/_Pager.cshtml
+++ b/TASVideos/Pages/Shared/_Pager.cshtml
@@ -2,19 +2,25 @@
 @model IPaged
 
 <row class="my-2 align-items-center">
-	<div class="col-12">
+	<div class="col-12 text-end">
+		<small><label class="text-muted me-4"> Showing items [@(Model.Offset() + 1) - @Model.LastRow()] of @Model.RowCount</label></small>
+		<a asp-page="@ViewContext.Page()" class="btn btn-outline-secondary">
+			<i class="fa fa-sort"> <i class="fa fa-times-circle"></i></i>
+		</a>
+	</div>
+	<div class="col-12 text-center">
 		<div class="btn-group flex-wrap" role="group">
-			@{ 
+			@{
 				var pagerClass = "btn btn-secondary border-dark flex-grow-0";
 				var ellipsisClass = "btn btn-outline-secondary border-dark flex-grow-0";
 			}
 			<a disable="@Model.CurrentPage == 1"
-			   asp-page="@ViewContext.Page()"
-			   asp-all-route-data="@Model.AdditionalProperties()"
-			   asp-route-CurrentPage="@(Model.CurrentPage - 1)"
-			   asp-route-PageSize="@Model.PageSize"
-			   asp-route-Sort="@Model.Sort"
-			   type="button" class="@pagerClass">
+				asp-page="@ViewContext.Page()"
+				asp-all-route-data="@Model.AdditionalProperties()"
+				asp-route-CurrentPage="@(Model.CurrentPage - 1)"
+				asp-route-PageSize="@Model.PageSize"
+				asp-route-Sort="@Model.Sort"
+				type="button" class="@pagerClass">
 				<span class="fa fa-chevron-left"></span>
 			</a>
 
@@ -26,24 +32,24 @@
 				var leftHidden = pageList.Where(p => 2 < p && p < currentPage - 1).ToList();
 				var middleShown = pageList.Where(p => 2 < p && currentPage - 1 <= p && p <= currentPage + 1 && p < totalPages - 1);
 				var rightHidden = pageList.Where(p => currentPage + 1 < p && p < totalPages - 1).ToList();
-				var rightShown = pageList.Where(p => totalPages - 1 <= p);
+				var rightShown = pageList.Where(p => 2 < p && totalPages - 1 <= p);
 				foreach (var iteratorPage in leftShown)
 				{
 					<a asp-page="@ViewContext.Page()"
-					   asp-all-route-data="@Model.AdditionalProperties()"
-					   asp-route-CurrentPage="@iteratorPage"
-					   asp-route-PageSize="@Model.PageSize"
-					   asp-route-Sort="@Model.Sort"
-					   type="button" class="@pagerClass @(iteratorPage == currentPage ? "active" : "")">@iteratorPage</a>
+						asp-all-route-data="@Model.AdditionalProperties()"
+						asp-route-CurrentPage="@iteratorPage"
+						asp-route-PageSize="@Model.PageSize"
+						asp-route-Sort="@Model.Sort"
+						type="button" class="@pagerClass @(iteratorPage == currentPage ? "active" : "")">@iteratorPage</a>
 				}
 				if (leftHidden.Count == 1)
 				{
 					<a asp-page="@ViewContext.Page()"
-					   asp-all-route-data="@Model.AdditionalProperties()"
-					   asp-route-CurrentPage="@leftHidden.First()"
-					   asp-route-PageSize="@Model.PageSize"
-					   asp-route-Sort="@Model.Sort"
-					   type="button" class="@pagerClass">@leftHidden.First()</a>
+						asp-all-route-data="@Model.AdditionalProperties()"
+						asp-route-CurrentPage="@leftHidden.First()"
+						asp-route-PageSize="@Model.PageSize"
+						asp-route-Sort="@Model.Sort"
+						type="button" class="@pagerClass">@leftHidden.First()</a>
 
 				}
 				<div condition="leftHidden.Count > 1" class="btn-group" role="group">
@@ -53,11 +59,11 @@
 						{
 							<li>
 								<a asp-page="@ViewContext.Page()"
-								   asp-all-route-data="@Model.AdditionalProperties()"
-								   asp-route-CurrentPage="@iteratorPage"
-								   asp-route-PageSize="@Model.PageSize"
-								   asp-route-Sort="@Model.Sort"
-								   class="dropdown-item">@iteratorPage</a>
+									asp-all-route-data="@Model.AdditionalProperties()"
+									asp-route-CurrentPage="@iteratorPage"
+									asp-route-PageSize="@Model.PageSize"
+									asp-route-Sort="@Model.Sort"
+									class="dropdown-item">@iteratorPage</a>
 							</li>
 						}
 					</ul>
@@ -65,20 +71,20 @@
 				foreach (var iteratorPage in middleShown)
 				{
 					<a asp-page="@ViewContext.Page()"
-					   asp-all-route-data="@Model.AdditionalProperties()"
-					   asp-route-CurrentPage="@iteratorPage"
-					   asp-route-PageSize="@Model.PageSize"
-					   asp-route-Sort="@Model.Sort"
-					   type="button" class="@pagerClass @(iteratorPage == currentPage ? "active" : "")">@iteratorPage</a>
+						asp-all-route-data="@Model.AdditionalProperties()"
+						asp-route-CurrentPage="@iteratorPage"
+						asp-route-PageSize="@Model.PageSize"
+						asp-route-Sort="@Model.Sort"
+						type="button" class="@pagerClass @(iteratorPage == currentPage ? "active" : "")">@iteratorPage</a>
 				}
 				if (rightHidden.Count == 1)
 				{
 					<a asp-page="@ViewContext.Page()"
-					   asp-all-route-data="@Model.AdditionalProperties()"
-					   asp-route-CurrentPage="@rightHidden.First()"
-					   asp-route-PageSize="@Model.PageSize"
-					   asp-route-Sort="@Model.Sort"
-					   type="button" class="@pagerClass">@rightHidden.First()</a>
+						asp-all-route-data="@Model.AdditionalProperties()"
+						asp-route-CurrentPage="@rightHidden.First()"
+						asp-route-PageSize="@Model.PageSize"
+						asp-route-Sort="@Model.Sort"
+						type="button" class="@pagerClass">@rightHidden.First()</a>
 				}
 				<div condition="rightHidden.Count > 1" class="btn-group" role="group">
 					<button type="button" class="@ellipsisClass" data-bs-toggle="dropdown">...</button>
@@ -87,11 +93,11 @@
 						{
 							<li>
 								<a asp-page="@ViewContext.Page()"
-								   asp-all-route-data="@Model.AdditionalProperties()"
-								   asp-route-CurrentPage="@iteratorPage"
-								   asp-route-PageSize="@Model.PageSize"
-								   asp-route-Sort="@Model.Sort"
-								   class="dropdown-item">@iteratorPage</a>
+									asp-all-route-data="@Model.AdditionalProperties()"
+									asp-route-CurrentPage="@iteratorPage"
+									asp-route-PageSize="@Model.PageSize"
+									asp-route-Sort="@Model.Sort"
+									class="dropdown-item">@iteratorPage</a>
 							</li>
 						}
 					</ul>
@@ -99,76 +105,22 @@
 				foreach (var iteratorPage in rightShown)
 				{
 					<a asp-page="@ViewContext.Page()"
-					   asp-all-route-data="@Model.AdditionalProperties()"
-					   asp-route-CurrentPage="@iteratorPage"
-					   asp-route-PageSize="@Model.PageSize"
-					   asp-route-Sort="@Model.Sort"
-					   type="button" class="@pagerClass @(iteratorPage == currentPage ? "active" : "")">@iteratorPage</a>
+						asp-all-route-data="@Model.AdditionalProperties()"
+						asp-route-CurrentPage="@iteratorPage"
+						asp-route-PageSize="@Model.PageSize"
+						asp-route-Sort="@Model.Sort"
+						type="button" class="@pagerClass @(iteratorPage == currentPage ? "active" : "")">@iteratorPage</a>
 				}
 			}
 			<a disable="@Model.CurrentPage == Model.LastPage()"
-			   asp-page="@ViewContext.Page()"
-			   asp-all-route-data="@Model.AdditionalProperties()"
-			   asp-route-CurrentPage="@(Model.CurrentPage + 1)"
-			   asp-route-PageSize="@Model.PageSize"
-			   asp-route-Sort="@Model.Sort"
-			   type="button" class="@pagerClass">
+				asp-page="@ViewContext.Page()"
+				asp-all-route-data="@Model.AdditionalProperties()"
+				asp-route-CurrentPage="@(Model.CurrentPage + 1)"
+				asp-route-PageSize="@Model.PageSize"
+				asp-route-Sort="@Model.Sort"
+				type="button" class="@pagerClass">
 				<span class="fa fa-chevron-right"></span>
 			</a>
 		</div>
-	</div>
-	<div class="col-md-4 float-start" condition="@Model.LastPage() > 1">
-		<a disable="@Model.CurrentPage == 1"
-		   asp-page="@ViewContext.Page()"
-		   asp-all-route-data="@Model.AdditionalProperties()"
-		   asp-route-CurrentPage="1"
-		   asp-route-PageSize="@Model.PageSize"
-		   asp-route-Sort="@Model.Sort"
-		   class="btn btn-secondary btn-sm" title="First Page">
-			<span class="fa fa-fast-backward"></span>
-		</a>
-		<a disable="@Model.CurrentPage == 1"
-		   asp-page="@ViewContext.Page()"
-		   asp-all-route-data="@Model.AdditionalProperties()"
-		   asp-route-CurrentPage="@(Model.CurrentPage - 1)"
-		   asp-route-PageSize="@Model.PageSize"
-		   asp-route-Sort="@Model.Sort"
-		   class="btn btn-secondary btn-sm" title="Previous Page">
-			<span class="fa fa-chevron-left"></span>
-		</a>
-		<a disable="@Model.CurrentPage == Model.LastPage()"
-		   asp-page="@ViewContext.Page()"
-		   asp-all-route-data="@Model.AdditionalProperties()"
-		   asp-route-CurrentPage="@(Model.CurrentPage + 1)"
-		   asp-route-PageSize="@Model.PageSize"
-		   asp-route-Sort="@Model.Sort"
-		   class="btn btn-secondary btn-sm" title="Next Page">
-			<span class="fa fa-chevron-right"></span>
-		</a>
-		<a disable="@Model.CurrentPage == Model.LastPage()"
-		   asp-page="@ViewContext.Page()"
-		   asp-all-route-data="@Model.AdditionalProperties()"
-		   asp-route-CurrentPage="@Model.LastPage()"
-		   asp-route-PageSize="@Model.PageSize"
-		   asp-route-Sort="@Model.Sort"
-		   class="btn btn-secondary btn-sm" title="Last Page">
-			<span class="fa fa-fast-forward"></span>
-		</a>
-		<a asp-page="@ViewContext.Page()" class="btn btn-secondary btn-sm">Reset</a>
-	</div>
-	<div class="@(Model.LastPage() <= 1 ? "ms-3" : "") @(Model.LastPage() > 1 ? "col-md-4 text-md-center" : "col text-md-end")">
-		<label>Showing @(Model.Offset() + 1) - @Model.LastRow() of @Model.RowCount</label>
-	</div>
-	<div class="col-md-4 text-md-end" condition="@Model.LastPage() > 1">
-		<form method="GET" asp-page="@ViewContext.Page()">
-			@foreach (var prop in Model.AdditionalProperties())
-			{
-				<input type="hidden" name="@prop.Key" value="@prop.Value" />
-			}
-			<input type="hidden" asp-for="PageSize" />
-			<input type="hidden" asp-for="Sort" />
-			<label>Page <input type="number" asp-for="CurrentPage" min="1" max="@Model.LastPage()" class="input-sm" style="height: 23px; padding: 2px 5px; max-width: 65px;"> Of @Model.LastPage()</label>
-			<button type="submit" class="btn btn-secondary btn-sm">Go To</button>
-		</form>
 	</div>
 </row>
