add float-start to the + button that expands welcome

--- a/TASVideos/Pages/Forum/_ForumHeader.cshtml
+++ b/TASVideos/Pages/Forum/_ForumHeader.cshtml
@@ -1,5 +1,5 @@
 ﻿<small>
-	<i id="forum-header-restore" class="fa fa-plus border border-info bg-info p-1 mb-1 text-white border-r d-none" style="cursor: pointer; border-radius: 5px"></i>
+	<i id="forum-header-restore" class="float-start fa fa-plus border border-info bg-info p-1 mb-1 text-white border-r d-none" style="cursor: pointer; border-radius: 5px"></i>
 </small>
 <info-alert id="forum-header" class="d-none">
 	<button id="forum-header-dismiss" type="button" class="btn-close float-end" aria-label="close"></button>
