removing unnecessary vertical space on top of buttons

--- a/TASVideos/Pages/Forum/Index.cshtml
+++ b/TASVideos/Pages/Forum/Index.cshtml
@@ -4,7 +4,7 @@
 	ViewData["Title"] = "Forum";
 }
 <partial Name="_ForumHeader" />
-<fullrow class="pb-2 pt-2">
+<fullrow class="pb-2">
 	<div class="float-end">
 		<a asp-page="/Forum/Posts/Latest" class="btn btn-secondary btn-sm">
 			Latest Posts
