center checkbox as suggested by bootstrap itself

--- a/TASVideos/Pages/Publications/Edit.cshtml
+++ b/TASVideos/Pages/Publications/Edit.cshtml
@@ -118,7 +118,7 @@
 				<div class="input-group">
 					<input asp-for="Publication.RevisionMessage" class="form-control" />
 					<div class="input-group-text">
-						<input type="checkbox" class="form-check-input me-1" asp-for="Publication.MinorEdit" />
+						<input type="checkbox" class="form-check-input me-1 mt-0" asp-for="Publication.MinorEdit" />
 						<label asp-for="Publication.MinorEdit" class="form-check-label"></label>
 					</div>
 				</div>
