--- a/TASVideos/Pages/Submissions/Edit.cshtml
+++ b/TASVideos/Pages/Submissions/Edit.cshtml
@@ -105,7 +105,7 @@
 				<div class="input-group">
 					<input asp-for="Submission.RevisionMessage" class="form-control" />
 					<div class="input-group-text">
-						<input type="checkbox" class="form-check-input me-1" asp-for="Submission.MinorEdit" />
+						<input type="checkbox" class="form-check-input me-1 mt-0" asp-for="Submission.MinorEdit" />
 						<label asp-for="Submission.MinorEdit" class="form-check-label"></label>
 					</div>
 				</div>
