--- a/TASVideos/Pages/Wiki/Edit.cshtml
+++ b/TASVideos/Pages/Wiki/Edit.cshtml
@@ -17,7 +17,7 @@
 		<div class="input-group">
 			<input type="text" asp-for="PageToEdit.RevisionMessage" class="form-control" autocomplete="off" />
 			<div class="input-group-text">
-				<input type="checkbox" class="form-check-input me-1" asp-for="PageToEdit.MinorEdit" />
+				<input type="checkbox" class="form-check-input me-1 mt-0" asp-for="PageToEdit.MinorEdit" />
 				<label asp-for="PageToEdit.MinorEdit" class="form-check-label"></label>
 			</div>
 		</div>
