--- a/TASVideos/Pages/Forum/Subforum/Index.cshtml
+++ b/TASVideos/Pages/Forum/Subforum/Index.cshtml
@@ -11,12 +11,10 @@
 }
 
 <partial Name="_ForumHeader" />
-<div class="row">
-	<div class="col">
-		<a permission="EditForums" asp-page="Edit" asp-route-id="@Model.Forum.Id" class="ms-2 float-end btn btn-primary btn-sm border border-warning"><i class="fa fa-pencil"></i> Edit</a>
-		<a permission="CreateForumTopics" asp-page="/Forum/Topics/Create" asp-route-forumId="@Model.Forum.Id" class="float-end btn btn-primary btn-sm"><span class="fa fa-plus"></span> New Topic</a>
-	</div>
-</div>
+<full-row>
+	<a permission="EditForums" asp-page="Edit" asp-route-id="@Model.Forum.Id" class="ms-2 float-end btn btn-primary btn-sm border border-warning"><i class="fa fa-pencil"></i> Edit</a>
+	<a permission="CreateForumTopics" asp-page="/Forum/Topics/Create" asp-route-forumId="@Model.Forum.Id" class="float-end btn btn-primary btn-sm"><span class="fa fa-plus"></span> New Topic</a>
+</full-row>
 <h4>
 	<a asp-page="/Forum/Index">Forum</a> → @Model.Forum.Name
 </h4>
