full width revision messages

--- a/TASVideos/Pages/Submissions/Edit.cshtml
+++ b/TASVideos/Pages/Submissions/Edit.cshtml
@@ -99,7 +99,7 @@
 		</form-group>
 	</fullrow>
 	<row>
-		<div class="col-lg-6">
+		<div class="col-12">
 			<form-group>
 				<label asp-for="Submission.RevisionMessage" class="form-control-label"></label>
 				<div class="input-group">
