--- a/TASVideos/Pages/Publications/Edit.cshtml
+++ b/TASVideos/Pages/Publications/Edit.cshtml
@@ -112,7 +112,7 @@
 		</form-group>
 	</fullrow>
 	<row>
-		<div class="col-lg-6">
+		<div class="col-12">
 			<form-group>
 				<label asp-for="Publication.RevisionMessage" class="form-control-label"></label>
 				<div class="input-group">
