add colors to announcements and sticky and adjust for dark and light mode

--- a/TASVideos/wwwroot/css/partials/_darkmode.scss
+++ b/TASVideos/wwwroot/css/partials/_darkmode.scss
@@ -8,6 +8,8 @@
 	--border-separator-color: #{$bs-gray-700};
 	--cardprimary: #{$card-primary-dark};
 	--cardsecondary: #{$card-secondary-dark};
+	--bs-warning: #{$warning-dark};
+	--bs-warning-rgb: #{$warning-dark-rgb};
 	--bs-info: #{$info-dark};
 	--bs-info-rgb: #{$info-dark-rgb};
 	--bs-dark: #{$bs-gray-100};
