Make API link in footer a relative path so it works in non-prod environments

--- a/TASVideos/Pages/Shared/_Layout.cshtml
+++ b/TASVideos/Pages/Shared/_Layout.cshtml
@@ -118,7 +118,7 @@
 	<footer class="mb-3">
 		<button id="button-scrolltop" class="d-none position-fixed px-3 py-1 m-2 bottom-0 end-0 btn btn-primary fa fa-caret-up"></button>
 		<row class="justify-content-start align-items-center">
-			<p class="col-auto my-auto">&copy; @DateTime.UtcNow.Year - TASVideos <a href="https://github.com/TASVideos/tasvideos/commit/@ViewData["VersionSha"]">v@(ViewData["Version"])</a> - <a href="https://tasvideos.org/api">API</a></p>
+			<p class="col-auto my-auto">&copy; @DateTime.UtcNow.Year - TASVideos <a href="https://github.com/TASVideos/tasvideos/commit/@ViewData["VersionSha"]">v@(ViewData["Version"])</a> - <a href="/api">API</a></p>
 		</row>
 	</footer>
 </div>
