Change default embed image

--- a/TASVideos/Pages/Submissions/View.cshtml
+++ b/TASVideos/Pages/Submissions/View.cshtml
@@ -50,7 +50,7 @@
 	<meta property="og:title" content="@($"Submission #{Model.Id}")" />
 	<meta property="og:description" content="@(Model.Submission.Title)" />
 	<meta property="og:url" content="@HttpContext.Request.ToUrl()" />
-	<meta property="og:image" content="@($"{HttpContext.Request.ToBaseUrl()}/images/logo-light-4x.png")" />
+	<meta property="og:image" content="@($"{HttpContext.Request.ToBaseUrl()}/images/logo-embed.png")" />
 }
 
 @section PageTitle {
