--- a/TASVideos/Pages/Shared/_WikiLayout.cshtml
+++ b/TASVideos/Pages/Shared/_WikiLayout.cshtml
@@ -19,7 +19,7 @@
 	<meta property="og:title" content="@pageData.PageName" />
 	<meta property="og:description" content="@description" />
 	<meta property="og:url" content="@Context.Request.ToUrl()" />
-	<meta property="og:image" content="@($"{Context.Request.ToBaseUrl()}/images/logo-light-4x.png")" />
+	<meta property="og:image" content="@($"{Context.Request.ToBaseUrl()}/images/logo-embed.png")" />
 }
 
 @section PageTitle {
