--- a/TASVideos/Pages/Forum/Topics/Index.cshtml
+++ b/TASVideos/Pages/Forum/Topics/Index.cshtml
@@ -90,7 +90,7 @@
 				if (!player) {
 					window.onYouTubeIframeAPIReady = () => {
 						player = new YT.Player('ytplayer', {
-							videoId: "@Model.EncodeEmbedLink!.Split("/").Last()"
+							videoId: "@Model.EncodeEmbedLink!.Split('/').Last()"
 						});
 					}
 				}
