fix gamename module having newlines being converted into spaces

--- a/TASVideos/Pages/Shared/Components/GameName/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/GameName/Default.cshtml
@@ -1,8 +1,6 @@
 ﻿@model IList<GameNameModel>
 @if (Model.Any(g => g.IsSystem))
-{
-	<span>@Model.First().System</span>
-}
+{<span>@Model.First().System</span>}
 else
 {
 	for (int i = 0; i < Model.Count; i++)
