--- a/TASVideos/Pages/Shared/Components/GameName/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/GameName/Default.cshtml
@@ -1,6 +1,8 @@
 ﻿@model IList<GameNameModel>
 @if (Model.Any(g => g.IsSystem))
-{<span>@Model.First().System</span>}
+{
+	<text><span>@Model.First().System</span></text>
+}
 else
 {
 	for (int i = 0; i < Model.Count; i++)
